# Kanarek-MCP

./: LICENSE  README.md  pyproject.toml
src/kanarek_mcp/: __init__.py  api_client.py  formatters.py  server.py
tests/: test_integration.py  test_tools.py
