[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanarek-mcp"
version = "1.0.0"
description = "MCP server for real-time air quality data from 15,000+ stations across Poland"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
requires-python = ">=3.10"
authors = [{ name = "Kanarek" }]
keywords = ["mcp", "air-quality", "poland", "kanarek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
kanarek-mcp = "kanarek_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
